# memoro

./: .gitignore  LICENSE  README.md  _config.yml  index.html  index.js  index.md  index2.html  main.js  make-package.sh  memoro.sh  package-lock.json  package.json
cpp/: Makefile  autopsy.cc  autopsy_node.cc  binding.gyp  dataset.hpp  dataset_full.hpp  dataset_stats.hpp  memoro.cc  memoro.h  memoro_node.cc  pattern.cc  pattern.h  stacktree.cc  stacktree.h
css/: chunk_graph_dark.css  chunk_graph_light.css
desktop/: hplgst.json  index.html  index.js  main.js  make-package.sh  package.json
desktop/assets/icons/: icon64.icns
desktop/cpp/: Makefile  autopsy.cc  autopsy.h  autopsy_node.cc  binding.gyp  pattern.cc  pattern.h  stacktree.cc
desktop/css/: chunk_graph.css  chunk_graph_dark.css
desktop/js/: chunk_graph.js  chunkgraph.js
desktop/js/menu/: mainmenu.js
docs/: set_up.md  use_case.md
js/: chunkgraph.js
js/menu/: mainmenu.js
plain_html/: data.tsv  hplgst.json  index.html  index2.html
stats/: CMakeLists.txt  ChunkReader.cpp  ChunkReader.hpp  Main.cpp  Makefile  Memoro.hpp  Trace.cpp  TraceChunkWriter.hpp  TraceReader.cpp  TraceReader.hpp  TraceStatReader.hpp  TraceStatWriter.cpp  TraceStatWriter.hpp
